--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,3 +18,7 @@ python-dotenv = "^1.1.1"
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
+
+
+[tool.pylint]
+init-hook='sys.path.append("src")'
