--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ uvicorn = "^0.35.0"
 sqlmodel = "^0.0.24"
 aiomysql = "^0.2.0"
 python-dotenv = "^1.1.1"
+aiosqlite = "^0.21.0"
 
 
 [build-system]
